<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:weightSum="1">

    <ListView
        android:layout_width="match_parent"
        android:layout_height="390dp"
        android:id="@+id/list"
        android:layout_weight="1.00"
        android:choiceMode="multipleChoice"
        style="@style/AppTheme"
        android:clickable="false" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.00"
        android:gravity="center_vertical|center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Todos"
            android:id="@+id/bSelTodos"
            android:layout_gravity="right"
            android:clickable="false" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Ninguno"
            android:id="@+id/bSelNinguno"
            android:layout_gravity="right" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Enviar"
            android:id="@+id/bEnviar"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

</LinearLayout>